fixed the overflow scroll issue

--- a/src/pages/sharedLayout.module.css
+++ b/src/pages/sharedLayout.module.css
@@ -4,13 +4,7 @@
   grid-template-columns: auto 1fr;
   min-height: 100%;
 }
-.dashboardPage {
-  width: 85vw;
-  margin: 0 auto;
-  /* padding: 2rem ; */
-  padding: 1rem 1.5rem;
 
-}
 
 .sidebar {
   background-color: var(--sidebarBackground);
@@ -18,6 +12,17 @@
   /* height: 100%;
   min-height: 100vh; */
 }
+.dashboardPage {
+  width: 85vw;
+  margin: 0 auto;
+  /* padding: 2rem ; */
+  padding: 1rem 1.5rem;
+  
+  height: 100vh;
+  overflow-y: scroll;
+
+}
+
 
 /* @media (min-width: 992px) {
   .dashboard {
