--- a/src/pages/statistics/statistics.module.css
+++ b/src/pages/statistics/statistics.module.css
@@ -5,10 +5,3 @@
   align-items: center;
 }
 
-.psyPanContainer {
-  display: flex;
-  flex-wrap: wrap;
-  border: 1px solid black;
-  width: 100%;
-  justify-content: space-around;
-}
